fix(PriceCatalog): MLYSTOR-505 fix css for spacing picture

--- a/src/main/resources/public/sass/global/_lystore-specifics.scss
+++ b/src/main/resources/public/sass/global/_lystore-specifics.scss
@@ -282,6 +282,8 @@ body.lystore {
         max-height: 260px;
         margin-left: auto;
         margin-right: auto;
+        padding-top: 2rem;
+        padding-bottom: 2rem;
       }
       .summary{
         border-bottom: 1px #ccc solid;
